[gd_scene load_steps=4 format=2]

[ext_resource path="res://screens/screen-plugins/chat-minions/chat_minions.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 835.508, 10 )

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -707.878, 185.558, 0, 0, 0, 0, 732.141, 197.391, 0, 0, 0, 0, 730.726, 239.817, 0, 0, 0, 0, -713.535, 244.955, 0, 0, 0, 0, -707.878, 185.558 )
}

[node name="ChatMinions" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Walls" type="Node2D" parent="."]

[node name="Floor" type="StaticBody2D" parent="Walls"]
position = Vector2( 0, 430 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Floor"]
position = Vector2( 0, -30 )
shape = SubResource( 1 )

[node name="Ceiling" type="StaticBody2D" parent="Walls"]
position = Vector2( 0, -450.013 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Ceiling"]
shape = SubResource( 1 )

[node name="Left" type="StaticBody2D" parent="Walls"]
position = Vector2( -785.42, 0 )
rotation = -1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Left"]
shape = SubResource( 1 )

[node name="Right" type="StaticBody2D" parent="Walls"]
position = Vector2( 783.042, 0 )
rotation = -1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Right"]
shape = SubResource( 1 )

[node name="SpawnPath" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="SpawnPathFollow" type="PathFollow2D" parent="SpawnPath"]
position = Vector2( -707.878, 185.558 )
rotation = 0.00822128
rotate = false

[node name="ActiveMinions" type="Node" parent="."]
